sem_06/ppo/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postby-backend
spec:
  selector:
    app: postby-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
